Fix sidebar overlapping with content by adding contentWrapper

--- a/app/brain/page.module.css
+++ b/app/brain/page.module.css
@@ -1,3 +1,16 @@
+.contentWrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+  margin-left: 0;
+  transition: margin-left var(--transition-fast);
+}
+
+body.sidebar-open .contentWrapper {
+  margin-left: 240px;
+}
+
 .container {
   display: flex;
   flex-direction: column;
